--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,31 @@
+/*-------------- Menu---------*/
+.navbar {
+  padding: 10px 20px;
+}
+
+.navbar-brand  {
+  font-size: 25px;
+}
+
+.navbar-toggler {
+  border: none;
+  background-color: transparent;
+}
+
+.nav-link {
+  font-size: 18px;
+  padding: 10px 15px;
+  transition: all 0.3s ease;
+}
+
+#inicio .nav-link:hover {
+  color: #fca311 !important;
+  background-color: rgba(255, 255, 255, 0.2);
+  border-radius: 5px;
+}
 
 
-
+/*--------------Seccion de Inicio---------*/
 .inicio{
   min-height: 30rem;
   position: relative;
@@ -15,6 +40,37 @@
   background-size: cover;
 }
 
+header h3{
+  font-size: 2rem;
+  font-weight: bold;
+  text-align: center;
+  color: whitesmoke;
+  text-shadow: 5px 5px 7px rgba(0, 0, 0, 0.5); 
+}
+em{
+  background-color: #e21e80;
+}
+
+#inicio h1 {
+  font-size: 4rem !important;
+  text-shadow: 5px 5px 7px rgba(0, 0, 0, 0.5); 
+}
+
+.btn {
+  background-color: #fca311;
+  color: #000;
+  font-weight: bold;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
+  border: none;
+  border-radius: 4px;
+  padding: 10px 20px;
+  text-decoration: none;
+  margin-top: 20px;
+}
+
+#inicio .btn{
+  margin-right: 20%;
+}
 
 @media (min-width: 992px) {
   .inicio{
@@ -24,6 +80,64 @@
     font-size: 5rem;
   }
 }
+
+/*--------------Seccion de Acerca---------*/
+
+#info1{
+  margin: 0px 0px 0px 0px !important;
+} 
+
+.btn:hover{
+  box-shadow: 0 6px 8px rgba(0, 0, 0, 0.2);
+  transform: translateY(-2px);
+  background-color: #1D809F;
+}
+
+#info1 p {
+  margin: 3%;
+}
+
+.radio {
+  font-size: 18px;
+  color: #666;
+  line-height: 1.6;
+}
+
+#acerca{
+  background-color: rgba(var(--bs-light-rgb), var(--bs-bg-opacity)) !important;
+}
+
+
+/*--------------Seccion de Servicios---------*/
+#info2{
+  margin: 0px 0px 0px 0px !important;
+
+}
+
+#servicios h2{
+  font-weight: bold;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+}
+
+#acerca .btn{
+  margin: 0px;
+}
+
+#acerca {
+  padding: 40px 0;
+  border-radius: 10px;
+  box-shadow: 4px 4px 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+
+#info1 {
+  border-radius: 10px;
+  box-shadow: 4px 4px 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+
+
+/*--------------Seccion de Contacto---------*/
 
 .gradiente {
     background: #1e30f3;
@@ -39,18 +153,16 @@
     font-size: 1.5rem;
   }
 
-  #info2{
-    margin: 0px 0px 0px 0px !important;
-  
-  }
-#about{
-  
-  margin: 0px !important;
+#contacto h1{
+  font-size: 3rem !important;
+  text-shadow: none;
 }
-  #info1{
-    margin: 0px 0px 0px 0px !important;
-  } 
-  
+
+#contacto .btn{
+  margin: 0px;
+}
+
+
   footer.footer {
   padding-top: 5rem;
   padding-bottom: 5rem;
@@ -73,36 +185,5 @@ footer.footer .social-link:hover {
   text-decoration: none;
 }
 
-header h3{
-  font-size: 2rem;
-  font-weight: bold;
-  text-align: center;
-  color: #FFFFFF; 
-}
-
-#inicio h1 {
-  font-size: 3rem !important;
-}
-
-.btn {
-  background-color: #fca311;
-  color: #000;
-  font-weight: bold;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
-  border: none;
-  border-radius: 4px;
-  padding: 10px 20px;
-  text-decoration: none;
-  margin-top: 20px;
-}
-
-.btn:hover {
-  box-shadow: 0 6px 8px rgba(0, 0, 0, 0.2);
-  transform: translateY(-2px);
-}
-
-#info1 p {
-  margin: 3%;
-}
 
 
